Bug 117248 - Fix some inefficiencies in AnimationController's composite animation map.
Summary: Fix some inefficiencies in AnimationController's composite animation map.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: Performance
Depends on:
Blocks:
 
Reported: 2013-06-05 04:50 PDT by Andreas Kling
Modified: 2013-06-05 05:49 PDT (History)
4 users (show)

See Also:


Attachments
Patch (8.06 KB, patch)
2013-06-05 04:51 PDT, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-06-05 04:50:36 PDT
Fix some inefficiencies in AnimationController's composite animation map.
Comment 1 Andreas Kling 2013-06-05 04:51:07 PDT
Created attachment 203805 [details]
Patch
Comment 2 WebKit Commit Bot 2013-06-05 05:49:12 PDT
Comment on attachment 203805 [details]
Patch

Clearing flags on attachment: 203805

Committed r151218: <http://trac.webkit.org/changeset/151218>
Comment 3 WebKit Commit Bot 2013-06-05 05:49:14 PDT
All reviewed patches have been landed.  Closing bug.